deploy: e7d5ca51b02e3ad66a305b0df1c4c06dbe62f7c3

--- a/the_machinery_book/graphics/camera.html
+++ b/the_machinery_book/graphics/camera.html
@@ -185,7 +185,7 @@ Your browser does not support the video tag.
 <h2 id="camera-effects"><a class="header" href="#camera-effects">Camera Effects</a></h2>
 <p>The Machinery can simulate various camera effects as desired. These are implemented as separate components to allow full freedom in their application. Currently the following effects are available:</p>
 <table><thead><tr><th><strong>Effect</strong></th><th><strong>Description</strong></th></tr></thead><tbody>
-<tr><td>Bloom</td><td>The bloom effects adds fringes of light extending from the borders of bright areas of the scene. This simulates the real world glow that comes from viewing bright lights through a lens.</td></tr>
+<tr><td><a href="https://ourmachinery.github.io/themachinery-books/tutorials/post_processing/bloom.html">Bloom</a></td><td>The bloom effects adds fringes of light extending from the borders of bright areas of the scene. This simulates the real world glow that comes from viewing bright lights through a lens.</td></tr>
 <tr><td><a href="https://ourmachinery.github.io/themachinery-books/tutorials/post_processing/exposure.html">Exposure</a></td><td>Exposure controls the amount of light that hits the sensor. This has the effect of brightening or darkening the scene as desired. This can either be set using real world camera parameters or automatically as the human eye would.</td></tr>
 <tr><td>Depth of Field</td><td>Real world lenses cannot focus on the entire scene at the same time. The depth of field effect simulated this be blurring out of focus areas of the scene.</td></tr>
 </tbody></table>
