deploy: d1da48bd2097940bef889552054f407545b9d27e

--- a/the_machinery_book/creation_graphs/intro_unity.html
+++ b/the_machinery_book/creation_graphs/intro_unity.html
@@ -151,6 +151,7 @@
 <p><img src="https://www.dropbox.com/s/lg5dir5rxbz8c6l/tm_guide_creation_graph_unity.png?dl=1" alt="Simple surface shader" /></p>
 <p>In the example above the editor’s layout was made to resemble Unity’s shader graph view. When creating a material shader you need to specify a <code>Shader Instance</code> output node. From here we can specify out surface shader, in the example above the <code>Lit</code> node closely resembles Unity’s <code>PBR Master</code> node.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
