--- a/the_machinery_book/editing_workflows/sculpting.html
+++ b/the_machinery_book/editing_workflows/sculpting.html
@@ -172,6 +172,7 @@
 <h2 id="additional-though"><a class="header" href="#additional-though">Additional though</a></h2>
 <p>In addition to being a useful tool, the <em>Sculpt Component</em> also shows the deep integration you can get with custom plugins in The Machinery. The <em>Sculpt Component</em> is a separate plugin, completely isolated from the rest of The Machinery and if you wanted to, you could write your own plugins to do similar things.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
