--- a/the_machinery_book/extending_the_machinery/plugin-assets.html
+++ b/the_machinery_book/extending_the_machinery/plugin-assets.html
@@ -202,6 +202,7 @@ properties. If checked, the editor will monitor the plugin's import path for cha
 detects a file change, it will reimport the plugin.</p>
 <p>The <strong>Windows &amp; Linux DLL Path (2)</strong> can be used to provide the path to the DLLs for the importing the plugin. Plugin Assets need to obey the same rules as normal plugins. Therefore they need to provide the <code>TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)</code> function. In case this is not possible because the DLL is a helper the helper check box can be called.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
