--- a/the_machinery_book/getting_started/first_gameplay_project.html
+++ b/the_machinery_book/getting_started/first_gameplay_project.html
@@ -244,6 +244,7 @@ happens via the &quot;Scene Entity&quot; node. </p>
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>If you are more interested in physics, download the physics sample via the download tab in that project, you will learn more about the use of physics in the Engine.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
