--- a/the_machinery_book/helper_tools/hash.html
+++ b/the_machinery_book/helper_tools/hash.html
@@ -185,6 +185,7 @@ enum {
 <pre><code class="language-c">tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ASSET);
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
