--- a/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
+++ b/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
@@ -257,6 +257,7 @@ static void test_function(tm_unit_test_runner_i *test_runner, tm_allocator_i *al
 </code></pre>
 <p>All that's left is to build via <code>tmbuild</code> our plugin and watch the console output if our tests fail. This is how you integrate your tests into the whole build pipeline. </p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
