--- a/the_machinery_book/the_editor/index.html
+++ b/the_machinery_book/the_editor/index.html
@@ -167,6 +167,7 @@ Here's a brief description of what you can see:</p>
 <p><strong>Editor layouts</strong></p>
 <p>You can rearrange the Editor layouts by dragging tabs around in the Editor. The best structure for the Editor depends on what you are doing and your personal preferences. You can save layouts via the Window Menu. It is also possible to restore your layout to the default one or load a custom-defined one in this menu.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
