--- a/the_machinery_book/the_editor/simulate_tab.html
+++ b/the_machinery_book/the_editor/simulate_tab.html
@@ -161,6 +161,7 @@ While your simulation is running, you can Stop, reset or speed up the simulation
 <p><img src="https://paper-attachments.dropbox.com/s_688CFE67758A45D845E788E6DA05448A2BCF730C2B07FEF2D06AB18D2C46F736_1625573806537_image.png" alt="" /></p>
 <p>Besides those options, you have the <em>Render</em> option, which allows for the same options as in the Scene Tab.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
