--- a/the_machinery_book/the_truth/custom_truth_type.html
+++ b/the_machinery_book/the_truth/custom_truth_type.html
@@ -384,6 +384,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load) {
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>You can find more in depth and practical tutorials in the <a href="https://ourmachinery.github.io/themachinery-books/tutorials//the_truth/index.html">tutorial book</a></p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
