--- a/the_machinery_book/collaboration.html
+++ b/the_machinery_book/collaboration.html
@@ -235,6 +235,7 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p>When you are connected to a collaboration session you have this view. In the connected view you can chat with the other participants of the chat. The session will <strong>not</strong> terminate / disconnect if you close the tab.</p>
 <p><img src="https://www.dropbox.com/s/ehg9x2l8frvlo04/tm_guide_collab_connected.png?dl=1" alt="" /></p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
