--- a/the_machinery_book/creation_graphs/node_types.html
+++ b/the_machinery_book/creation_graphs/node_types.html
@@ -164,6 +164,7 @@ Currently we support the following output nodes, note that multiple of these can
 <tr><td>Entity Spawner - Output Transforms</td><td>Can be used to query transforms from the <code>Entity Spawner</code> node.</td></tr>
 </tbody></table>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
