--- a/the_machinery_book/editing_workflows/animation/index.html
+++ b/the_machinery_book/editing_workflows/animation/index.html
@@ -173,6 +173,7 @@ useful when you want to play simple animations such as doors opening, coins spin
 etc. If you want more control over the playback and be able to crossfade and blend between
 animations you should use an <em>Animation State Machine</em> instead.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
