--- a/the_machinery_book/editing_workflows/entities.html
+++ b/the_machinery_book/editing_workflows/entities.html
@@ -193,6 +193,7 @@ each child entity hold one of the lights.</p>
 Machinery is just an entity with a lot of child entities.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
