--- a/the_machinery_book/editing_workflows/import_assets.html
+++ b/the_machinery_book/editing_workflows/import_assets.html
@@ -342,6 +342,7 @@ understanding of to get started working with The Machinery.</p>
 <tr><td>tar</td><td>.tar</td></tr>
 </tbody></table>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
