--- a/the_machinery_book/editing_workflows/index.html
+++ b/the_machinery_book/editing_workflows/index.html
@@ -209,6 +209,7 @@ work.</p>
 get any visual feedback until the new window is created.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
