--- a/the_machinery_book/editing_workflows/physics.html
+++ b/the_machinery_book/editing_workflows/physics.html
@@ -261,6 +261,7 @@ glaring omissions are:</p>
 <h2 id="tutorials"><a class="header" href="#tutorials">Tutorials</a></h2>
 <p>For more information and guides checkout out the <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/">The Machinery Tutorials Book</a> as well as our <a href="https://ourmachinery.com/samples.html">Physics Sample</a>.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
