--- a/the_machinery_book/editing_workflows/prototypes.html
+++ b/the_machinery_book/editing_workflows/prototypes.html
@@ -223,6 +223,7 @@ instances, you can override specific nodes in the graph instance to customize th
 <li><a href="https://ourmachinery.github.io/themachinery-books/tutorials/workflows/how_to_instantiate_prototypes.html#how-to-instantiate-prototypes">How to instantiate Prototypes</a></li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
