--- a/the_machinery_book/editing_workflows/sound.html
+++ b/the_machinery_book/editing_workflows/sound.html
@@ -175,6 +175,7 @@ of the sound playing nodes in the visual scripting language.</p>
 </li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
