--- a/the_machinery_book/editing_workflows/visual-scripting.html
+++ b/the_machinery_book/editing_workflows/visual-scripting.html
@@ -167,6 +167,7 @@ component:</p>
 <p>For more information go and checkout the <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//gameplay_coding/visual_scripting/index.html">Gameplay Coding / Visual Scripting Chapter</a></p>
 <p>For more examples, check out the <code>pong</code> and <code>animation</code> projects in the samples.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
