--- a/the_machinery_book/extending_the_machinery/hot-reloading.html
+++ b/the_machinery_book/extending_the_machinery/hot-reloading.html
@@ -180,6 +180,7 @@ something like this:</p>
 <li>If you need to continue debugging, re-attach the debugger.</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
