--- a/the_machinery_book/extending_the_machinery/index.html
+++ b/the_machinery_book/extending_the_machinery/index.html
@@ -156,6 +156,7 @@
 <li>More complex tutorials about custom plugins check out the <a href="https://ourmachinery.github.io/themachinery-books/tutorials/">Tutorials Book</a></li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
