--- a/the_machinery_book/extending_the_machinery/the_plugin_system.html
+++ b/the_machinery_book/extending_the_machinery/the_plugin_system.html
@@ -314,6 +314,7 @@ is filled in with the actual function pointers. As long as you don’t <em>call<
 plugin that implements them has been loaded, you are good. (You can test this by checking for NULL
 pointers in the struct.)</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
