--- a/the_machinery_book/extending_the_machinery/write-a-tab.html
+++ b/the_machinery_book/extending_the_machinery/write-a-tab.html
@@ -494,6 +494,7 @@ tm_draw2d_api-&gt;fill_rect(uib.vbuffer, *uib.ibuffers, style, rect);
 
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
