--- a/the_machinery_book/gameplay_coding/ecs/how_entites_can_interact.html
+++ b/the_machinery_book/gameplay_coding/ecs/how_entites_can_interact.html
@@ -210,6 +210,7 @@
 <p><strong>IMPORTANT:</strong> When the data changes, the problem changes. Therefore, we have to properly evaluate with the descriptive method the possible outcome and maybe change the implementation.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
