--- a/the_machinery_book/gameplay_coding/ecs/how_to_define_a_engine_system.html
+++ b/the_machinery_book/gameplay_coding/ecs/how_to_define_a_engine_system.html
@@ -197,6 +197,7 @@
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>In the next chapter we translate this to actual code!</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
