--- a/the_machinery_book/gameplay_coding/ecs/how_to_design_system_or_engine.html
+++ b/the_machinery_book/gameplay_coding/ecs/how_to_design_system_or_engine.html
@@ -208,6 +208,7 @@ tm_entity_api-&gt;register_engine(ctx, &amp;movement_engine);
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>More details on writing your own system or engine is explained in the next chapter</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
