--- a/the_machinery_book/gameplay_coding/ecs/index.html
+++ b/the_machinery_book/gameplay_coding/ecs/index.html
@@ -304,6 +304,7 @@ automatically delete it from its parent — it will remain in the parent as a de
 </li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
