--- a/the_machinery_book/gameplay_coding/ecs/simulation_lifecycle.html
+++ b/the_machinery_book/gameplay_coding/ecs/simulation_lifecycle.html
@@ -164,6 +164,7 @@
 <p><strong>Note:</strong> that phases are just string hashes and you can extend the systems with more phases if desired.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
