--- a/the_machinery_book/gameplay_coding/ecs/what_are_components.html
+++ b/the_machinery_book/gameplay_coding/ecs/what_are_components.html
@@ -170,6 +170,7 @@ lists, strings, buffers, etc.</li>
 <li><strong>Complex component data:</strong> Generally speaking you want to avoid storing complex data such as arrays or heap allocated data in a component. It is possible and sometimes not possible to avoid, but it is always good to ask yourself if it is needed.</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
