--- a/the_machinery_book/gameplay_coding/ecs/write_a_custom_component.html
+++ b/the_machinery_book/gameplay_coding/ecs/write_a_custom_component.html
@@ -621,6 +621,7 @@ for (const tm_entity_blackboard_value_t *bb = data-&gt;blackboard_start;
 
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
