--- a/the_machinery_book/gameplay_coding/simulation_entry.html
+++ b/the_machinery_book/gameplay_coding/simulation_entry.html
@@ -244,6 +244,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load) {
 }
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
