--- a/the_machinery_book/gameplay_coding/visual_scripting/debugger.html
+++ b/the_machinery_book/gameplay_coding/visual_scripting/debugger.html
@@ -186,6 +186,7 @@
 <li>You can Stepover to the next node.</li>
 </ol>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
