--- a/the_machinery_book/getting_started/index.html
+++ b/the_machinery_book/getting_started/index.html
@@ -197,6 +197,7 @@ tracker</a> or ping us on <a href="https://discord.gg/uJtkbVr">Discord</a> and w
 <p>Make sure your GitHub account is correctly entered on the <a href="https://ourmachinery.com/profile.html">Profile</a> page. It should be your account name, not your email.</p>
 <p>GitHub invites frequently end up in the Spam folder. Check there or go to the <a href="https://github.com/ourmachinery/themachinery">repository</a> to see your invite.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
