--- a/the_machinery_book/getting_started/introduction_to_c.html
+++ b/the_machinery_book/getting_started/introduction_to_c.html
@@ -304,6 +304,7 @@ for(tm_tt_id* id = all_objects;id != tm_carray_end(all_objects);++id){
 TM_SHUTDOWN_TEMP_ALLOCATOR(ta);
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
