--- a/the_machinery_book/getting_started/migration_from_unreal.html
+++ b/the_machinery_book/getting_started/migration_from_unreal.html
@@ -222,6 +222,7 @@
 <h3 id="using-visual-scripting"><a class="header" href="#using-visual-scripting">Using Visual Scripting</a></h3>
 <p>Visual Scripting is a perfect solution for in-game logic flow (simple) and sequencing of actions. It is a great system for artists, designers, and visually oriented programmers. It is important to keep in mind that the Visual Scripting language comes with an overhead that you would not pay in C (or any other Language you may use for your gameplay code).</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
