--- a/the_machinery_book/getting_started/new_project.html
+++ b/the_machinery_book/getting_started/new_project.html
@@ -241,6 +241,7 @@ When publishing a Game, the Engine will ask you to select your &quot;world&quot;
 my_project/game_plugins // the main folder for all your gameplay code, plugins
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
