--- a/the_machinery_book/getting_started/project_setup.html
+++ b/the_machinery_book/getting_started/project_setup.html
@@ -184,6 +184,7 @@ src/libs/*
 </code></pre>
 <p>as well as the default Visual Studio, Visual Studio Code and C/C++ gitignore content.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
