--- a/the_machinery_book/getting_started/what_is_in_the_package.html
+++ b/the_machinery_book/getting_started/what_is_in_the_package.html
@@ -200,6 +200,7 @@ license information.</p>
 <li>Write your own applications, using <em>The Machinery</em> as an SDK.</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
