--- a/the_machinery_book/glossary.html
+++ b/the_machinery_book/glossary.html
@@ -172,6 +172,7 @@
 <tr><td><code>tmsl</code></td><td><code>.tmsl</code> stands for <code>The Machinery Shader Language</code> and is essentially a data-driven json front-end to create a <a href="https://ourmachinery.com/apidoc/plugins/shader_system/shader_system.h.html#tm_shader_declaration_o">tm_shader_declaration_o</a>. The <a href="https://ourmachinery.com/apidoc/plugins/shader_system/shader_system.h.html#tm_shader_declaration_o">tm_shader_declaration_o</a> can be anything from a complete shader configuration (all needed shader stages, any states and input/output it needs, etc) that can be compiled and used when rendering a draw call (or dispatching a compute job), to just fragments of that. Typically a <code>.tmsl</code> file only contains fragments of what's needed and our shader compiler combines a bunch of them to build a functional shader.</td></tr>
 </tbody></table>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
