--- a/the_machinery_book/graphics/default_render_pipeline.html
+++ b/the_machinery_book/graphics/default_render_pipeline.html
@@ -149,6 +149,7 @@
                         <h1 id=""><a class="header" href="#"></a></h1>
 <p><img src="https://www.dropbox.com/s/61buexu1hw0pvms/tm_default_render_pipeline.png?dl=1" alt="" /></p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
