--- a/the_machinery_book/graphics/physical_light_and_camera.html
+++ b/the_machinery_book/graphics/physical_light_and_camera.html
@@ -203,6 +203,7 @@
 <li><a href="https://www.youtube.com/watch?v=_lZvF-YyP0s">The Challenges of High-Speed Filming</a>: visual explanation of shutter speed and aperture relative to exposure.</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
