--- a/the_machinery_book/graphics/the_machinery_shading_language.html
+++ b/the_machinery_book/graphics/the_machinery_shading_language.html
@@ -195,6 +195,7 @@ compile: {}
 <p><strong>Note:</strong> Shader are also used to create GPU nodes for the Creation Graph, see Creation Graph: <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//creation_graphs/shader_system.html">Shader System Interaction</a> for more information.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
