--- a/the_machinery_book/graphics/tmsl_vs.html
+++ b/the_machinery_book/graphics/tmsl_vs.html
@@ -159,6 +159,7 @@
 <p>VS Code will follow at some point.</p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
