--- a/the_machinery_book/helper_tools/tmbuild_package_reference.html
+++ b/the_machinery_book/helper_tools/tmbuild_package_reference.html
@@ -326,6 +326,7 @@ Steps are defined as a normal <code>json</code> object. The following list displ
 <h3 id="clean"><a class="header" href="#clean"><code>clean</code></a></h3>
 <p>Will call the <code>--clean</code> command on <code>tmbuild</code>.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
