--- a/the_machinery_book/licenses.html
+++ b/the_machinery_book/licenses.html
@@ -167,6 +167,7 @@ user / year.</p>
 <p>All of the licenses allow for full royalty-free use of The Machinery. You can build and sell commercial games, tools, applications, and plugins. For more details, see our <a href="http://www.ourmachinery.com/pricing.html">pricing page</a>.</p>
 <p>When you download The Machinery, you will be on the Indie Free license. If you do not fall in the &quot;indie&quot; category, you can still use this license to evaluate The Machinery, but you need to buy a business license to put it into production.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
