--- a/the_machinery_book/qa_pipeline/how_to_write_integration_tests.html
+++ b/the_machinery_book/qa_pipeline/how_to_write_integration_tests.html
@@ -241,6 +241,7 @@ static void my_test_tick(tm_integration_test_runner_i *test_runner)
 <pre><code>./bin/the-machinery.exe --test stress-test
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
