--- a/the_machinery_book/qa_pipeline/index.html
+++ b/the_machinery_book/qa_pipeline/index.html
@@ -155,6 +155,7 @@
 <li><a href="https://ourmachinery.com/apidoc/foundation/memory_tracker.h.html#memory_tracker.h">Memory leak Detection</a></li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
