--- a/the_machinery_book/qa_pipeline/statistics.html
+++ b/the_machinery_book/qa_pipeline/statistics.html
@@ -155,6 +155,7 @@
 <p>During the simulation in the simulate tab you have the ability to open different statistic overlays.</p>
 <p><img src="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?dl=1" alt="https://www.dropbox.com/s/cmk3u9lt4d8l3n0/tm_guide_statistics_in_simulate.png?dl=1" /></p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
