--- a/the_machinery_book/the_editor/asset_browser.html
+++ b/the_machinery_book/the_editor/asset_browser.html
@@ -242,6 +242,7 @@ You can also drag assets from the Windows-Explorer into your project. This actio
 <tr><td>Shift + O</td><td>Opens a Directory or Asset</td></tr>
 </tbody></table>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
