--- a/the_machinery_book/the_editor/customizations.html
+++ b/the_machinery_book/the_editor/customizations.html
@@ -208,6 +208,7 @@
 <p><img src="https://www.dropbox.com/s/doenzd3d3gniq0u/tm_guide_change_grid_scene_tab.png?dl=1" alt="" /></p>
 <p>Changes made there will only be applied to the specific tab.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
