--- a/the_machinery_book/the_editor/entity_tree_tab.html
+++ b/the_machinery_book/the_editor/entity_tree_tab.html
@@ -208,6 +208,7 @@
 <tr><td>CTRL + X</td><td>Cuts Entities</td></tr>
 </tbody></table>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
