--- a/the_machinery_book/the_editor/preview_tab.html
+++ b/the_machinery_book/the_editor/preview_tab.html
@@ -161,6 +161,7 @@ It allows for the same Free-Camera controls as the Scene Tab. </p>
 <li><strong>Mouse Wheel</strong>: To zoom in, you can zoom in or out via the mouse wheel.</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
