--- a/the_machinery_book/the_editor/properties_tab.html
+++ b/the_machinery_book/the_editor/properties_tab.html
@@ -170,6 +170,7 @@ We call the room asset a <em>prototype</em>, and we call each placed room entity
 <li>link somehow somewhere the prototype content</li>
 </ul>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
