--- a/the_machinery_book/the_truth/access_values.html
+++ b/the_machinery_book/the_truth/access_values.html
@@ -192,6 +192,7 @@
 <p><strong>Note:</strong> Check out the logger documentation for more information on it. <a href="https://ourmachinery.com/apidoc/foundation/log.h.html#log.h">log.h</a></p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
