--- a/the_machinery_book/the_truth/aspects.html
+++ b/the_machinery_book/the_truth/aspects.html
@@ -173,6 +173,7 @@ typedef struct tm_debug_print_aspect_i {
 </blockquote>
 <p>The best example of how the Engine is using the aspect system is the <code>TM_TT_ASPECT__PROPERTIES</code> which helps us to defines custom UIs for Truth objects.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
