--- a/the_machinery_book/the_truth/common_types.html
+++ b/the_machinery_book/the_truth/common_types.html
@@ -170,6 +170,7 @@
 <p><strong>Note:</strong> There is a list of all Truth Types the Engine comes with available on our <a href="https://ourmachinery.com/apidoc/truth_types.html">API Documentation</a></p>
 </blockquote>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
