--- a/the_machinery_book/the_truth/modify_an_object.html
+++ b/the_machinery_book/the_truth/modify_an_object.html
@@ -249,6 +249,7 @@ tm_the_truth_api-&gt;commit(tt, my_object_w, undo_scope);
 
 </code></pre>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
