--- a/the_machinery_book/writing_an_executable.html
+++ b/the_machinery_book/writing_an_executable.html
@@ -162,6 +162,7 @@ use <code>tmbuild.exe</code> to build the executable.</p>
 <p><img src="https://www.dropbox.com/s/oz9zob150yksnhr/simple-3d.png?dl=1" alt="Simple 3D executable." /></p>
 <p>You will find the source code for this too in the samples directory.</p>
 <h3 id="contributors"><a class="header" href="#contributors">Contributors</a></h3>
+<p><a href="mailto:simon@ourmachinery.com"><img src="https://www.gravatar.com/avatar/b83de4c1812480cc09310470ca2949a9?s=32" alt="Simon Renger" /> Simon Renger</a></p>
 
                     </main>
 
