--- a/the_machinery_book/gameplay_coding/ecs/write_a_custom_component.html
+++ b/the_machinery_book/gameplay_coding/ecs/write_a_custom_component.html
@@ -227,9 +227,7 @@ static void truth__create_types(struct tm_the_truth_o *tt) {
       TM_TT_PROP__CUSTOM_COMPONENT__AMPLITUDE, 1.0f, -1);
   tm_the_truth_api-&gt;set_default_object(tt, custom_component_type,
                                        default_object);
-
-  tm_the_truth_api-&gt;set_aspect(tt, custom_component_type, TM_CI_EDITOR_UI,
-                               editor_aspect);
+  tm_tt_set_aspect(tt, custom_component_type, tm_ci_editor_ui_i, editor_aspect);
 }
 static bool component__load_asset(tm_component_manager_o *man,
                                   struct tm_entity_commands_o *commands,
@@ -378,7 +376,7 @@ struct tm_custom_component_t {
 </code></pre>
 <h3 id="add-your-component-to-the-truth"><a class="header" href="#add-your-component-to-the-truth">Add your component to the Truth</a></h3>
 <p>After this, we have the region in which we define the category of our component. The Editor will call it to categorize the component into the correct section. </p>
-<p>We need to define a <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i">tm_ci_editor_ui_i</a> object which uses this function.  Later we register this function to the <code>TM_CI_EDITOR_UI</code> aspect of our truth type. If you do not add this aspect later to your Truth Type, the Editor will not know that this Component Type exists, and you can not add it via the Editor, but in C.</p>
+<p>We need to define a <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i">tm_ci_editor_ui_i</a> object which uses this function.  Later we register this function to the <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i">tm_ci_editor_ui_i</a> aspect of our truth type. If you do not add this aspect later to your Truth Type, the Editor will not know that this Component Type exists, and you can not add it via the Editor, but in C.</p>
 <blockquote>
 <p><strong>Note:</strong> More about aspects you can read in the <a href="#">aspects guide</a>.</p>
 </blockquote>
@@ -408,9 +406,7 @@ static tm_ci_editor_ui_i *editor_aspect =
       TM_TT_PROP__CUSTOM_COMPONENT__AMPLITUDE, 1.0f, -1);
   tm_the_truth_api-&gt;set_default_object(tt, custom_component_type,
                                        default_object);
-
-  tm_the_truth_api-&gt;set_aspect(tt, custom_component_type, TM_CI_EDITOR_UI,
-                               editor_aspect);
+  tm_tt_set_aspect(tt, custom_component_type, tm_ci_editor_ui_i, editor_aspect);
 }
 
 </code></pre>
@@ -418,7 +414,7 @@ static tm_ci_editor_ui_i *editor_aspect =
 <li>We define the component's properties.</li>
 <li>We create the actual type in the Truth.</li>
 <li>We create an object of our type with <code>quick_create_object</code> and provide a default object to our component. It makes sure that when you add the component to an Entity, you have the expected default values. It is not needed, just a nice thing to have.</li>
-<li>Add our <code>TM_CI_EDITOR_UI</code> aspect to the type. It tells the Editor that you can add the component via the Editor. If you do not provide it, the Editor will not suggest this component to you and cannot store it in the Truth. It does not mean you cannot add this component via C.</li>
+<li>Add our <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i">tm_ci_editor_ui_i</a> aspect to the type. It tells the Editor that you can add the component via the Editor. If you do not provide it, the Editor will not suggest this component to you and cannot store it in the Truth. It does not mean you cannot add this component via C.</li>
 </ol>
 <h3 id="define-your-component"><a class="header" href="#define-your-component">Define your component</a></h3>
 <p>You can register a component to the <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#tm_entity_create_component_i">tm_entity_create_component_i</a> in your plugin load function. This interface expects a function pointer to a create component function of the signature: <code>void tm_entity_create_component_i(struct tm_entity_context_o *ctx)</code>.</p>
