--- a/tutorials/ui/custom_layouts.html
+++ b/tutorials/ui/custom_layouts.html
@@ -243,9 +243,9 @@ static struct tm_the_truth_api *tm_the_truth_api;
 #include &lt;foundation/temp_allocator.h&gt;
 #include &lt;foundation/the_truth.h&gt;
 
+#include &lt;plugins/ui/docking.h&gt;
 #include &lt;plugins/ui/layouts.h&gt;
 #include &lt;plugins/ui/ui_icon.h&gt;
-#include &lt;the_machinery/the_machinery.h&gt;
 
 // tabs:
 #include &lt;the_machinery/asset_browser_tab.h&gt;
@@ -254,6 +254,7 @@ static struct tm_the_truth_api *tm_the_truth_api;
 #include &lt;the_machinery/preview_tab.h&gt;
 #include &lt;the_machinery/properties_tab.h&gt;
 #include &lt;the_machinery/scene_tab.h&gt;
+#include &lt;the_machinery/the_machinery.h&gt;
 
 #define TM_LAYOUT_NAME_HASH TM_STATIC_HASH(&quot;my_layout&quot;, 0xc1b38d6389074e53ULL)
 #define TM_LAYOUT_NAME &quot;my_layout&quot;
