--- a/tutorials/the_truth/custom_asset/part3.html
+++ b/tutorials/the_truth/custom_asset/part3.html
@@ -544,7 +544,7 @@ struct task__import_txt
 // .. other code
 </code></pre>
 <p>We fill out the struct with the needed data, copy the file name, and then ask the task system to run the task:</p>
-<pre><code class="language-c">static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object, uint32_t indent)
+<pre><code class="language-c">static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object)
 {
     tm_the_truth_o *tt = args-&gt;tt;
     bool picked = false;
@@ -732,7 +732,7 @@ static struct tm_asset_io_i txt_asset_io = {
 // -- asset on its own
 
 //custom ui
-static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object, uint32_t indent)
+static float properties__custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object)
 {
     tm_the_truth_o *tt = args-&gt;tt;
     bool picked = false;
@@ -764,11 +764,11 @@ static void create_truth_types(struct tm_the_truth_o *tt)
         { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER },
     };
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, TM_ARRAY_COUNT(my_asset_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
+    tm_tt_set_aspect(tt, type, tm_tt_assets_file_extension_aspect_i, &quot;txt&quot;);
     static tm_properties_aspect_i properties_aspect = {
         .custom_ui = properties__custom_ui,
     };
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__PROPERTIES, &amp;properties_aspect);
+    tm_tt_set_aspect(tt, type, tm_properties_aspect_i, &amp;properties_aspect);
 }
 
 // -- asset browser regsiter interface
