--- a/tutorials/the_truth/drag_and_drop.html
+++ b/tutorials/the_truth/drag_and_drop.html
@@ -178,7 +178,7 @@
 </ul>
 <h2 id="about-aspects"><a class="header" href="#about-aspects">About aspects</a></h2>
 <p>An “aspect” is an interface (struct of function pointers) identified by a unique identifier. The Truth allows you to associate aspects with object types. This lets you extend The Truth with new functionality. For example, you could add an interface for debug printing an object:</p>
-<pre><code class="language-c">#define TM_TT_ASPECT__DEBUG_PRINT TM_STATIC_HASH(&quot;tm_debug_print_aspect_i&quot;, 0x39821c78639e0773ULL)
+<pre><code class="language-c">#define tm_debug_print_aspect_i_hash TM_STATIC_HASH(&quot;tm_debug_print_aspect_i&quot;, 0x39821c78639e0773ULL)
 
 typedef struct tm_debug_print_aspect_i
 {
@@ -192,7 +192,7 @@ typedef struct tm_debug_print_aspect_i
 <p>You could then use this code to debug print an object <code>o</code> with:</p>
 <pre><code class="language-c">static void example_use_case(tm_the_truth_o *tt, tm_tt_id_t object)
 {
-    tm_debug_print_aspect_i *dp = tm_the_truth_api-&gt;get_aspect(tt, tm_tt_type(object), TM_TT_ASPECT__DEBUG_PRINT);
+    tm_debug_print_aspect_i *dp = tm_tt_get_aspect(tt, tm_tt_type(object), tm_debug_print_aspect_i);
     if (dp)
         dp-&gt;debug_print(tt, object);
 }
@@ -201,7 +201,7 @@ typedef struct tm_debug_print_aspect_i
 <blockquote>
 <p><strong>Note</strong>: that plugins can extend the system with completely new aspects.</p>
 </blockquote>
-<p>The best example of how the Engine is using the aspect system is the <code>TM_TT_ASPECT__PROPERTIES</code> which helps us to defines custom UIs for Truth objects.</p>
+<p>The best example of how the Engine is using the aspect system is the <a href="https://ourmachinery.com/apidoc/plugins/editor_views/properties.h.html#structtm_properties_aspect_i">tm_properties_aspect_i</a> which helps us to defines custom UIs for Truth objects.</p>
 <h2 id="adding-drag-and-drop-to-our-asset"><a class="header" href="#adding-drag-and-drop-to-our-asset">Adding Drag and Drop to our asset</a></h2>
 <p>In this example, we are going back to our text asset sample. In that sample, we have the following function to register the asset to the Truth:</p>
 <pre><code class="language-c">static void create_truth_types(struct tm_the_truth_o *tt)
@@ -211,18 +211,19 @@ typedef struct tm_debug_print_aspect_i
         { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER },
     };
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, TM_ARRAY_COUNT(my_asset_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
+    tm_tt_set_aspect(tt, type, tm_tt_assets_file_extension_aspect_i, &quot;txt&quot;);
     static tm_properties_aspect_i properties_aspect = {
         .custom_ui = properties__custom_ui,
     };
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__PROPERTIES, &amp;properties_aspect);
+
+    tm_tt_set_aspect(tt, type, tm_properties_aspect_i, &amp;properties_aspect);
     tm_the_truth_property_definition_t story_component_properties[] = {
         [TM_TT_PROP__STORY_COMPONENT__ASSET] = { &quot;story_asset&quot;, .type = TM_THE_TRUTH_PROPERTY_TYPE_REFERENCE, .type_hash = TM_TT_TYPE_HASH__MY_ASSET }
     };
 }
 
 </code></pre>
-<p>We need to make use of the <code>TM_TT_ASPECT__ASSET_SCENE</code> aspect. This aspect allows the associated Truth Type to be dragged and dropped to the Scene if wanted! We can find it in the <code>plugins/the_machinery_shared/asset_aspects.h</code> header.</p>
+<p>We need to make use of the <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/asset_aspects.h.html#structtm_asset_scene_api">tm_asset_scene_api</a> aspect. This aspect allows the associated Truth Type to be dragged and dropped to the Scene if wanted! We can find it in the <code>plugins/the_machinery_shared/asset_aspects.h</code> header.</p>
 <h3 id="asset-scene-aspect"><a class="header" href="#asset-scene-aspect">Asset Scene Aspect</a></h3>
 <p>This aspect expects an instance of the <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/asset_aspects.h.html#structtm_asset_scene_api">tm_asset_scene_api</a>. When we provide a call-back called</p>
 <p><code>bool (*droppable)(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt, tm_tt_id_t asset);</code> we tell the scene that we can drag the asset out of the asset browser. We need to return true for this. In this case you need to provide the <code>create_entity</code> function. When you drag your asset into the Scene, this function is called by the Engine. In this function, you can create a new entity and attach it to the parent entity ( which might be the world.  If you drag it on top of another entity, you can attach the newly created entity as a child entity to this one. </p>
@@ -257,12 +258,13 @@ static void create_truth_types(struct tm_the_truth_o *tt)
         { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER },
     };
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, TM_ARRAY_COUNT(my_asset_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
+    tm_tt_set_aspect(tt, type, tm_tt_assets_file_extension_aspect_i, &quot;txt&quot;);
     static tm_properties_aspect_i properties_aspect = {
         .custom_ui = properties__custom_ui,
     };
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__PROPERTIES, &amp;properties_aspect);
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__ASSET_SCENE, &amp;scene_api); // &lt;&lt;---
+
+    tm_tt_set_aspect(tt, type, tm_properties_aspect_i, &amp;properties_aspect);
+    tm_tt_set_aspect(tt, type, tm_asset_scene_api, &amp;scene_api); // &lt;&lt;---
     tm_the_truth_property_definition_t story_component_properties[] = {
         [TM_TT_PROP__STORY_COMPONENT__ASSET] = { &quot;story_asset&quot;, .type = TM_THE_TRUTH_PROPERTY_TYPE_REFERENCE, .type_hash = TM_TT_TYPE_HASH__MY_ASSET }
     };
@@ -272,8 +274,8 @@ static void create_truth_types(struct tm_the_truth_o *tt)
     };
 
     const tm_tt_type_t story_component_type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__STORY_COMPONENT, story_component_properties, TM_ARRAY_COUNT(story_component_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_CI_EDITOR_UI, editor_aspect);
-    tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_TT_ASPECT__PROPERTIES, &amp;properties_component_aspect);
+    tm_tt_set_aspect(tt, story_component_type, tm_ci_editor_ui_i, editor_aspect);
+    tm_tt_set_aspect(tt, story_component_type, tm_properties_aspect_i, &amp;properties_component_aspect);
 }
 
 
@@ -443,12 +445,12 @@ static void component__destroy(tm_component_manager_o *manager)
 };
 
 const tm_tt_type_t story_component_type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__STORY_COMPONENT, story_component_properties, TM_ARRAY_COUNT(story_component_properties));
-tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_CI_EDITOR_UI, editor_aspect);
-tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_TT_ASPECT__PROPERTIES, &amp;properties_component_aspect);
+tm_tt_set_aspect(tt, story_component_type, tm_ci_editor_ui_i, editor_aspect);
+tm_tt_set_aspect(tt, story_component_type, tm_properties_aspect_i, &amp;properties_component_aspect);
 
 </code></pre>
 <p>And than we need to define our custom UI:</p>
-<pre><code class="language-c">static float properties__component_custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object, uint32_t indent)
+<pre><code class="language-c">static float properties__component_custom_ui(struct tm_properties_ui_args_t *args, tm_rect_t item_rect, tm_tt_id_t object)
 {
     TM_INIT_TEMP_ALLOCATOR(ta);
     tm_tt_type_t asset_type = tm_the_truth_api-&gt;object_type_from_name_hash(args-&gt;tt, TM_TT_TYPE_HASH__ASSET);
@@ -482,10 +484,10 @@ tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_TT_ASPECT__PROPERTI
 };
 
 const tm_tt_type_t story_component_type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__STORY_COMPONENT, story_component_properties, TM_ARRAY_COUNT(story_component_properties));
-tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_CI_EDITOR_UI, editor_aspect);
-tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_TT_ASPECT__PROPERTIES, &amp;properties_component_aspect);
+tm_tt_set_aspect(tt, story_component_type, tm_ci_editor_ui_i, editor_aspect);
+tm_tt_set_aspect(tt, story_component_type, tm_properties_aspect_i, &amp;properties_component_aspect);
 
-tm_the_truth_api-&gt;set_property_aspect(tt, story_component_type, TM_TT_PROP__STORY_COMPONENT__ASSET, TM_TT_PROP_ASPECT__PROPERTIES__ASSET_PICKER, TM_TT_TYPE_HASH__TXT_ASSET);
+tm_tt_set_property_aspect(tt, story_component_type, TM_TT_PROP__STORY_COMPONENT__ASSET, tm_tt_prop_aspect__properties__asset_picker, TM_TT_TYPE__MY_ASSET);
 }
 </code></pre>
 <h2 id="drag-and-drop-a-text-asset-into-the-scene-and-create-an-entity"><a class="header" href="#drag-and-drop-a-text-asset-into-the-scene-and-create-an-entity">Drag and drop a Text Asset into the Scene and create an entity</a></h2>
@@ -507,12 +509,13 @@ tm_asset_scene_api scene_api = {
         { &quot;data&quot;, TM_THE_TRUTH_PROPERTY_TYPE_BUFFER },
     };
     const tm_tt_type_t type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__MY_ASSET, my_asset_properties, TM_ARRAY_COUNT(my_asset_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__FILE_EXTENSION, &quot;txt&quot;);
+    tm_tt_set_aspect(tt, type, tm_tt_assets_file_extension_aspect_i, &quot;txt&quot;);
     static tm_properties_aspect_i properties_aspect = {
         .custom_ui = properties__custom_ui,
     };
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__PROPERTIES, &amp;properties_aspect);
-    tm_the_truth_api-&gt;set_aspect(tt, type, TM_TT_ASPECT__ASSET_SCENE, &amp;scene_api); // &lt;&lt;---
+
+    tm_tt_set_aspect(tt, type, tm_properties_aspect_i, &amp;properties_aspect);
+    tm_tt_set_aspect(tt, type, tm_asset_scene_api, &amp;scene_api); // &lt;&lt;---
     tm_the_truth_property_definition_t story_component_properties[] = {
         [TM_TT_PROP__STORY_COMPONENT__ASSET] = { &quot;story_asset&quot;, .type = TM_THE_TRUTH_PROPERTY_TYPE_REFERENCE, .type_hash = TM_TT_TYPE_HASH__MY_ASSET }
     };
@@ -522,8 +525,8 @@ tm_asset_scene_api scene_api = {
     };
 
     const tm_tt_type_t story_component_type = tm_the_truth_api-&gt;create_object_type(tt, TM_TT_TYPE__STORY_COMPONENT, story_component_properties, TM_ARRAY_COUNT(story_component_properties));
-    tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_CI_EDITOR_UI, editor_aspect);
-    tm_the_truth_api-&gt;set_aspect(tt, story_component_type, TM_TT_ASPECT__PROPERTIES, &amp;properties_component_aspect);
+    tm_tt_set_aspect(tt, story_component_type, tm_ci_editor_ui_i, editor_aspect);
+    tm_tt_set_aspect(tt, story_component_type, tm_properties_aspect_i, &amp;properties_component_aspect);
 }
 
 //..
@@ -542,7 +545,7 @@ tm_asset_scene_api scene_api = {
 // ... more code
 tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt,
     tm_tt_id_t asset, const char *name, const tm_transform_t *local_transform,
-    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack)
+    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack, tm_tt_undo_scope_t parent_undo_scope)
 {
     const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Create Entity From Creation Graph&quot;));
     const tm_tt_type_t entity_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ENTITY);
@@ -580,7 +583,7 @@ tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *t
 <p>First, we create an entity:</p>
 <pre><code class="language-c">tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt,
     tm_tt_id_t asset, const char *name, const tm_transform_t *local_transform,
-    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack)
+    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack, tm_tt_undo_scope_t parent_undo_scope)
 {
     const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Create Entity From Creation Graph&quot;));
     const tm_tt_type_t entity_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ENTITY);
@@ -594,7 +597,7 @@ tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *t
 <p>Suppose it needs a transform. If not, we don't! In this case, we add the transform to the entity, just to make a point:</p>
 <pre><code class="language-c">tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt,
     tm_tt_id_t asset, const char *name, const tm_transform_t *local_transform,
-    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack)
+    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack, tm_tt_undo_scope_t parent_undo_scope)
 {
     const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Create Entity From Creation Graph&quot;));
     const tm_tt_type_t entity_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ENTITY);
@@ -616,7 +619,7 @@ tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *t
 <p>Then, we add the story component to the entity we follow the same steps as before.</p>
 <pre><code class="language-c">tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt,
     tm_tt_id_t asset, const char *name, const tm_transform_t *local_transform,
-    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack)
+    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack, tm_tt_undo_scope_t parent_undo_scope)
 {
     const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Create Entity From Creation Graph&quot;));
     const tm_tt_type_t entity_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ENTITY);
@@ -647,7 +650,7 @@ tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *t
 <p>Do not forget to add the undo scope to make sure we can undo our action and return the created entity!</p>
 <pre><code class="language-c">tm_tt_id_t create_entity(struct tm_asset_scene_o *inst, struct tm_the_truth_o *tt,
     tm_tt_id_t asset, const char *name, const tm_transform_t *local_transform,
-    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack)
+    tm_tt_id_t parent_entity, tm_tt_id_t asset_root, struct tm_undo_stack_i *undo_stack, tm_tt_undo_scope_t parent_undo_scope)
 {
     const tm_tt_undo_scope_t undo_scope = tm_the_truth_api-&gt;create_undo_scope(tt, TM_LOCALIZE(&quot;Create Entity From Creation Graph&quot;));
     const tm_tt_type_t entity_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__ENTITY);
@@ -722,8 +725,8 @@ static void create_truth_types_modify(struct tm_the_truth_o *tt)
 {
     tm_tt_type_t asset_type = tm_the_truth_api-&gt;object_type_from_name_hash(tt, TM_TT_TYPE_HASH__MY_ASSET);
     if (asset_type.u64) {
-        if (tm_the_truth_api-&gt;get_aspect(tt, asset_type, TM_TT_ASPECT__ASSET_SCENE))
-            tm_the_truth_api-&gt;set_aspect(tt, asset_type, TM_TT_ASPECT__ASSET_SCENE, &amp;scene_api);
+        if (tm_tt_get_aspect(tt, asset_type, tm_asset_scene_api))
+            tm_tt_set_aspect(tt, asset_type, tm_asset_scene_api, &amp;scene_api);
     }
 }
 
